web/ocp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-test
