web/ocp/test-no-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-labels
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "echo NO-LABEL && sleep 36000"]
