web/ocp/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-mutate-webhook
webhooks:
  - name: pod-mutate.webhook.system
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    clientConfig:
      service:
        namespace: webhook-system
        name: pod-mutate-svc
        path: "/mutate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNwakNDQVk0Q0NRRDZqd2JteUNaT0hqQU5CZ2txaGtpRzl3MEJBUXNGQURBVk1STXdFUVlEVlFRRERBcDMKWldKb2IyOXJMV05oTUI0WERUSTFNVEV3T1RFeE1ESXdNVm9YRFRNMU1URXdOekV4TURJd01Wb3dGVEVUTUJFRwpBMVVFQXd3S2QyVmlhRzl2YXkxallUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCCkFOQWV2cExleWh2M0dBZ3FhTWM5QVJPbDVjUE8wNm9lSDBicTdCd3paWjBMUml3ckJreXVaWG9GdGZOeXQ4TFIKY05vcXorcHVnb3pWdHo1RVNsWDg1U2dTRmFIMU1zNWM3Vk9mTTlpSGRneSs3Q1VDb1puaDUzYk9pdWpKSDlqMQprWXo0ZzRxV3dE [...]
